--- a/css/style.css
+++ b/css/style.css
@@ -8,26 +8,71 @@ body {
 }
 
 .u-center-text {
-  text-align: center; }
+    text-align: center;
+}
 
 .header {
     position: relative;
 }
 
 .heading-primary {
-  position: absolute;
-  top: 30vh;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-  .heading-primary--main {
+    position: absolute;
+    top: 30vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.heading-primary--main {
     display: inline-block;
     font-size: 3rem;
     font-weight: bold;
     text-transform: uppercase;
-    margin-bottom: 2rem;}
-  .heading-primary--sub h5{
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: 1rem solid rgba(4,51,255,.8);
+}
+
+.heading-primary--sub h5 {
     font-size: 2rem;
     font-weight: 400; 
-    margin: 0;}
+    margin: 0;
+}
+
+section#search-wrapper {
+    padding: 1.5rem 0;
+    margin: 3rem 0;
+    border-radius: 5px;
+}
+
+#search-template {
+    width: 50%; 
+    margin: 50vh auto 0;
+}
+
+#main th { 
+    position: sticky; 
+    top: 0px;
+    background-color: #fff; 
+}
+
+.metaDiv {
+    width: 50%;
+}
+
+.metaDiv, .tableTitle {
+    font-size: 2.5rem;
+    font-weight: bold;
+    border-top: 1rem solid rgba(4,51,255,.8);
+    width: 50%;
+    padding: 1rem 0 .5rem 0;
+    background: white;
+    z-index: 1;
+}
+
+.dataTables_wrapper .dataTables_length {
+    margin-bottom: 1.5rem;
+}
+
+
 
 
