--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,14 @@ section#search-wrapper {
 
 .metaDiv {
     width: 50%;
+    top: 3.9rem;
+    height: 5rem;
+    margin-bottom: .5rem;
+}
+
+.tableTitle {
+    margin-bottom: 1rem;
+    height: 3.5rem;
 }
 
 .metaDiv, .tableTitle {
@@ -71,6 +79,10 @@ section#search-wrapper {
 
 .dataTables_wrapper .dataTables_length {
     margin-bottom: 1.5rem;
+}
+
+#main_wrapper {
+    top: -1rem;
 }
 
 
