--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,14 @@ section#search-wrapper {
     top: -1rem;
 }
 
+tfoot th {
+    padding: 1rem 1rem 6px;
+    text-align: left;
+}
 
+table.dataTable tfoot th, table.dataTable tfoot td {
+    padding: 10px 18px 6px 8px;
+    border-top: 1px solid #111;
+}
 
 
